<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_graph"
    app:startDestination="@id/shoppingFragment">

    <fragment
        android:id="@+id/shoppingFragment"
        android:name="com.example.androidtesting.ui.shopping.ShoppingFragment"
        android:label="ShoppingFragment" >
        <action
            android:id="@+id/action_shoppingFragment_to_addShoppingItemFragment"
            app:destination="@id/addShoppingItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/addShoppingItemFragment"
        android:name="com.example.androidtesting.ui.add.AddShoppingItemFragment"
        android:label="AddShoppingItemFragment" >
        <action
            android:id="@+id/action_addShoppingItemFragment_to_imagePickFragment"
            app:destination="@id/imagePickFragment" />
    </fragment>
    <fragment
        android:id="@+id/imagePickFragment"
        android:name="com.example.androidtesting.ui.picker.ImagePickFragment"
        android:label="ImagePickFragment" />
</navigation>